[tool.poetry]
name = "twin"
version = "0.1.0"
description = ""
authors = ["sahil  <returnofsahil@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
numpy = "^2.2.5"
pandas = "^2.2.3"
bs4 = "^0.0.2"
selenium = "^4.32.0"
pydantic = "^2.11.4"
pymongo = "^4.13.0"
structlog = "^25.3.0"
pydantic-settings = "^2.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
